--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -1,6 +1,5 @@
 .container-fluid {
   padding: 3% 15%;
-
 }
 
 h1 {
@@ -11,4 +10,30 @@ h1 {
 
 #title {
   background-color: #ff4c68;
+  color: #fff;
+}
+
+body {
+  font-family: 'Montserrat-Black', sans-serif;
+}
+
+/* Navigation bar */
+.navbar {
+  padding:0 0 4.5rem;
+}
+
+.nabbar-brand {
+  font-family: 'Ubuntu', sans-serif;
+  font-size: 2.5rem;
+  font-weight: bold;
+}
+
+nav-item {
+  padding: 0 18px;
+}
+
+nav-link {
+  font-size: 1.2rem;
+  font-family: 'Montserrat', sans-serif;
+  padding: 0 18px;
 }
