styling the 3rd section similar to second

--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -68,3 +68,16 @@ p {
 .icon:hover {
   color: #ff4c68;
 }
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+h2 {
+  font-size: 3rem;
+  font-family: Montserrat;
+  line-height: 1.5;
+}
