--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -81,3 +81,9 @@ h2 {
   font-family: Montserrat;
   line-height: 1.5;
 }
+
+.testimonial-img {
+  width: 10%;
+  border-radius: 100%;
+  margin:20px;
+}
