--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -85,5 +85,11 @@ h2 {
 .testimonial-img {
   width: 10%;
   border-radius: 100%;
-  margin:20px;
+  margin: 20px;
+}
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
 }
