--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -70,10 +70,13 @@ p {
 }
 
 #testimonials {
-  padding: 7% 15%;
   text-align: center;
   background-color: #ef8172;
   color: #fff;
+}
+
+.carousel-item {
+  padding: 7% 15%;
 }
 
 h2 {
@@ -98,3 +101,5 @@ h2 {
   width: 15%;
   margin: 20px 20px 5px;
 }
+
+.left-arrow {}
