--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -102,4 +102,11 @@ h2 {
   margin: 20px 20px 5px;
 }
 
-.left-arrow {}
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%
+}
