--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -1,5 +1,5 @@
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 h1 {
@@ -39,16 +39,21 @@ body {
 }
 
 .rotated {
-  transform: rotate(25deg)
+  width: 20%;
+  transform: rotate(25deg);
+  position: absolute;
 }
 
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
+
 }
 
 .feature-box {
   text-align: center;
-  padding: 5%;
+  padding: 7%;
 }
 
 h3 {
