--- a/2022-10-02-Bootstrap_startup website/css/styles.css
+++ b/2022-10-02-Bootstrap_startup website/css/styles.css
@@ -44,20 +44,22 @@ body {
   transform: rotate(25deg);
   position: absolute;
 }
-@media (max-width: 980px){
+
+@media (max-width: 980px) {
   .rotated {
     transform: rotate(0);
-    position:static;
+    position: static;
   }
+
   #title {
     text-align: center;
   }
 }
+
 #features {
   padding: 7% 15%;
   background-color: #fff;
   position: relative;
-
 }
 
 .feature-box {
@@ -123,4 +125,30 @@ h2 {
 
 .pricing-column {
   padding: 3% 2%
+}
+
+#cta {
+  background-color: #ff4c68;
+  text-align: center;
+  padding: 7% 15%;
+}
+
+.cta-heading{
+  font-family: Montserrat;
+  color: white;
+}
+
+footer {
+  text-align: center;
+  padding: 7% 15%;
+}
+
+@media (min-width: 900px) {
+  .cta-heading {
+    font-size: 2.5rem;
+  }
+}
+
+.social-icon {
+  margin: 20px 10px
 }
