--- a/My_Website/css/styles.css
+++ b/My_Website/css/styles.css
@@ -2,6 +2,13 @@
 
 /* Global Styles 
 ============================*/
+html {
+    box-sizing: border-box;
+}
+*, *:before, *:after {
+    box-sizing: inherit;
+}
+
 body {
     color: #343434;
     margin: 0;
