--- a/My_Website/css/styles.css
+++ b/My_Website/css/styles.css
@@ -52,7 +52,8 @@ h1, h2 {
 ===============================*/
 header {
     background:#2F3061;
-    color:#F7FFF7
+    color:#F7FFF7;
+    text-align: center;
 }
 
 
@@ -86,6 +87,10 @@ header {
     float: left;
     padding: 20px;
 }
+
+.project h3 {
+    margin: 0;
+}
 /*  Work Experience 
 ================================*/
 .work-experience {
@@ -100,7 +105,20 @@ header {
 =================================*/
 footer {
     background: #343434;
-    color:#F7FFF7
+    color:#F7FFF7;
+    text-align: center;
 
+}
+
+.contact-list {
+    list-style-type: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+}
+
+.contact-list a {
+    padding: 15px;
+    display: inline-flex;
 }
 
