--- a/My_Website/css/styles.css
+++ b/My_Website/css/styles.css
@@ -97,6 +97,12 @@ header {
     background: #A1c6D7;
 }
 
+.job-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    column-gap: 20px;
+}
+
 /*  Education 
 ================================*/
 
