--- a/My_Website/css/styles.css
+++ b/My_Website/css/styles.css
@@ -48,6 +48,16 @@ h1, h2 {
     padding-bottom: 60px;
 }
 
+h3 {
+    margin-bottom: 0;
+}
+.item-details h3 + p {
+    font-style: italic;
+}
+.item-details h3 ~ p {
+    margin: 0;
+}
+
 /*  Profile 
 ===============================*/
 header {
