--- a/My_Website/css/styles.css
+++ b/My_Website/css/styles.css
@@ -48,7 +48,7 @@ h1, h2 {
     padding-bottom: 60px;
 }
 
-h3 {
+.item-details h3 {
     margin-bottom: 0;
 }
 .item-details h3 + p {
@@ -56,6 +56,14 @@ h3 {
 }
 .item-details h3 ~ p {
     margin: 0;
+}
+
+.divider > section {
+    border-bottom: 1px dashed #343434;
+    padding: 25px, 0;
+}
+.divider > section:last-of-type {
+    border-bottom: none;
 }
 
 /*  Profile 
@@ -89,8 +97,7 @@ header {
 }
 .project-item {
     overflow: hidden;
-    border-bottom: 1px dashed #343434;
-    padding: 25px, 0;
+
 
 }
 .project-item img {
