--- a/My_Website/css/styles.css
+++ b/My_Website/css/styles.css
@@ -42,7 +42,8 @@ h1, h2 {
     margin: 0;
 }
 .content-wrap {
-    width: 800px;
+    max-width: 800px;
+    width: 85%;
     margin: 0 auto;
     padding-top: 60px;
     padding-bottom: 60px;
@@ -116,7 +117,7 @@ header {
 
 .job-item {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr 2fr ;
     column-gap: 20px;
 }
 
