--- a/My_Website/css/styles.css
+++ b/My_Website/css/styles.css
@@ -72,7 +72,6 @@ h1, h2 {
 header {
     background:#2F3061;
     color:#F7FFF7;
-    text-align: center;
 }
 
 
@@ -130,15 +129,13 @@ header {
 footer {
     background: #343434;
     color:#F7FFF7;
-    text-align: center;
 
 }
 
 .contact-list {
     list-style-type: none;
     padding: 0;
-    display: flex;
-    justify-content: center;
+
 }
 
 .contact-list a {
@@ -149,6 +146,9 @@ footer {
 /* Responsive
 =================================*/
 @media screen and (min-width:750px) {
+    header, footer {
+        text-align: center;
+    }
     .project-item img {
         float: left;
         padding: 20px;
@@ -158,5 +158,24 @@ footer {
         display: grid;
         grid-template-columns: 1fr 2fr ;
         column-gap: 20px;
+    }
+    .contact-list {
+    display: flex;
+    justify-content: center;
+    }
+}
+
+
+@media screen and (max-width:749px) {
+    h1 {
+        font-size : 75px;
+        line-height: 0.9;
+        margin-bottom: 20px;
+    }
+    h2 {
+        line-height: 1;
+    }
+    .contact-list a {
+        padding: 5px;
     }
 }
