--- a/2023-03-02_Calculator/calc_styles.css
+++ b/2023-03-02_Calculator/calc_styles.css
@@ -1,7 +1,14 @@
+h1 {
+  font-family: Helvetica;
+  text-align: center;
+  font-size: 80px;
+}
+
 .main {
   width : 300px;
   height: 280px;
   background-color: black;
+
 }
 
 
