--- a/2023-03-03_todo_list/styles.css
+++ b/2023-03-03_todo_list/styles.css
@@ -35,7 +35,7 @@ li {
   display: flex;
   justify-content: space-between;
   padding: 0 2rem;
-  border 1px solid auqa;
+  border: 1px solid auqa;
   margin-bottom: 1rem;
   box-shadow: 0 0 10px 2px rgba(11, 60, 66, 0.6);
   transition: 0.3s linear;
@@ -46,7 +46,7 @@ li:hover {
 }
 
 .task-list  li.completed {
-  color greenyellow;
+  color: greenyellow;
 }
 
 .delete_task {
